Added Landing Page ; got rating from Button

--- a/index.html
+++ b/index.html
@@ -29,18 +29,21 @@
       to help us improve our offering!
       </p>
     </div>
-    <div class="margin-bottom-1em flex-row">
-      <button class="btn-all rating-btn">1</button>
-      <button class="btn-all rating-btn">2</button>
-      <button class="btn-all rating-btn">3</button>
-      <button class="btn-all rating-btn">4</button>
-      <button class="btn-all rating-btn">5</button>
-    </div>
     <div class="margin-bottom-1em">
-      <button type="submit" id="submit-btn">Submit</button>
+      <ul id ="rating-list"class="flex-row">
+        <li class="list-item"><button id="btn1" class="btn-all rating-btn">1</button></li>
+        <li class="list-item"><button id="btn2" class="btn-all rating-btn">2</button></li>
+        <li class="list-item"><button id="btn3" class="btn-all rating-btn">3</button></li>
+        <li class="list-item"><button id="btn4" class="btn-all rating-btn">4</button></li>
+        <li class="list-item"><button id="btn5" class="btn-all rating-btn">5</button></li>
+      </ul>
+    </div>
+  
+    <div class="margin-bottom-1em">
+        <button id="submit-btn">SUBMIT</button>
     </div>
   </div>
 
-  
+  <script src="script.js"></script>
 </body>
 </html>
